# recorder

./: Cargo.toml  README.md  global.css  index.html
src/: cam.rs  home.rs  icons.rs  main.rs  rec_trigger.rs  recorder.rs  router.rs  screen.rs  utils.rs
