[package]
name = "cross"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.1.7", features = ["web", "router"] }

gloo = {version = "0.6", features =["futures"]}
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0"
js-sys = "0.3"


[dependencies.web-sys]
version = "0.3"
features = ["Navigator","MediaDevices","MediaStreamConstraints", "MediaStream", "MediaStreamTrack",
"HtmlMediaElement", "HtmlVideoElement", "MediaRecorder", "RecordingState", "BlobEvent"]


